# serializer version: 1
# name: test_get_prices_basic
  dict({
    'hours_requested': 1.0,
    'prices': list([
      dict({
        'end': '2026-03-24T14:15:00-07:00',
        'price': 0.34,
        'start': '2026-03-24T14:00:00-07:00',
      }),
      dict({
        'end': '2026-03-24T14:30:00-07:00',
        'price': 0.3415,
        'start': '2026-03-24T14:15:00-07:00',
      }),
      dict({
        'end': '2026-03-24T14:45:00-07:00',
        'price': 0.343,
        'start': '2026-03-24T14:30:00-07:00',
      }),
      dict({
        'end': '2026-03-24T15:00:00-07:00',
        'price': 0.3445,
        'start': '2026-03-24T14:45:00-07:00',
      }),
    ]),
  })
# ---
# name: test_get_prices_crosses_midnight
  dict({
    'hours_requested': 1.0,
    'prices': list([
      dict({
        'end': '2026-03-25T00:00:00-07:00',
        'price': 0.4345,
        'start': '2026-03-24T23:45:00-07:00',
      }),
      dict({
        'end': '2026-03-25T00:15:00-07:00',
        'price': 0.25,
        'start': '2026-03-25T00:00:00-07:00',
      }),
      dict({
        'end': '2026-03-25T00:30:00-07:00',
        'price': 0.2515,
        'start': '2026-03-25T00:15:00-07:00',
      }),
      dict({
        'end': '2026-03-25T00:45:00-07:00',
        'price': 0.253,
        'start': '2026-03-25T00:30:00-07:00',
      }),
    ]),
  })
# ---
# name: test_get_prices_missing_slots_omitted
  dict({
    'hours_requested': 1.0,
    'prices': list([
      dict({
        'end': '2026-03-24T14:15:00-07:00',
        'price': 0.34,
        'start': '2026-03-24T14:00:00-07:00',
      }),
      dict({
        'end': '2026-03-24T14:45:00-07:00',
        'price': 0.343,
        'start': '2026-03-24T14:30:00-07:00',
      }),
      dict({
        'end': '2026-03-24T15:00:00-07:00',
        'price': 0.3445,
        'start': '2026-03-24T14:45:00-07:00',
      }),
    ]),
  })
# ---
